# 3-2-1-vector-search

./: .gitignore  README.md  app.py  chat.py  mcp_server.py  pyproject.toml  query.py  test.py  test2.py
data/raw/html/: april-1-2021_027c9e.html  april-10-2025_02a6ef.html  april-11-2024_a5b32e.html  april-13-2023_287724.html  april-14-2022_c50855.html  april-15-2021_cf6ebe.html  april-16-2020_4bfbe6.html  april-17-2025_2c100f.html  april-18-2024_d2e2f4.html  april-2-2020_b2f44b.html  april-20-2023_dc2526.html  april-21-2022_5dd733.html  april-22-2021_e15992.html  april-23-2020_142af8.html  april-24-2025_16d895.html  april-25-2024_12b11e.html  april-27-2023_3fefda.html  april-28-2022_ed46d1.html  april-29-2021_f33ad5.html  april-3-2025_bfbf93.html  april-30-2020_177a9e.html  april-4-2024_4dd54d.html  april-6-2023_18bf31.html  april-7-2022_5bba52.html  april-8-2021_fb18e8.html  april-9-2020_2a1f78.html  august-1-2024_ae7a15.html  august-10-2023_ae201d.html  august-11-2022_a1483f.html  august-12-2021_81747d.html  august-13-2020_222279.html  august-14-2025_4a972d.html  august-15-2019_2d7804.html  august-15-2024_95664a.html  august-17-2023_56ef6b.html  august-18-2022_fc84b6.html  august-19-2021_4356d8.html  august-20-2020_c23cf1.html  august-21-2025_abf145.html  august-22-2019_3f7d86.html  (+291 more)
data/raw/md/: 2019-08-08.md  2019-08-15.md  2019-08-22.md  2019-08-29.md  2019-09-05.md  2019-09-12.md  2019-09-19.md  2019-09-26.md  2019-10-03.md  (+322 more)
pipeline/: definitions.py  download_assets.py  embeddings_assets.py  encode_assets.py  markdown_assets.py  store_assets.py  utils.py
