[project]
name = "321_vector_store"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.3",
    "dagster-dg-cli>=1.12.3",
    "dagster-webserver>=1.12.3",
    "markdownify>=1.2.2",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "qdrant-client>=1.16.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.52.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dagster]
module_name = "pipeline.definitions"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "pipeline"


